--- a/config/in-cluster.toml
+++ b/config/in-cluster.toml
@@ -7,5 +7,8 @@ mode="debug"
     [logger.zap]
         path="zeus.log"
         level="Debug"
-[db]
-    default="user:password@tcp(host:port)/zeus?charset=utf8&parseTime=True&loc=Local"
+[mysql]
+    dsn="user:password@tcp(host:port)/zeus?charset=utf8&parseTime=True&loc=Local"
+    [pool]
+        min=5
+        max=20
