--- a/config/in-local.toml
+++ b/config/in-local.toml
@@ -7,5 +7,8 @@ mode="debug"
     [logger.zap]
         path="zeus.log"
         level="Debug"
-[db]
-    default="user:password@tcp(host:port)/zeus?charset=utf8&parseTime=True&loc=Local"
+[mysql]
+    dsn="${MYSQL_USERNAME}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/zeus?charset=utf8&parseTime=True&loc=Local"
+    [pool]
+        min=5
+        max=20
