--- a/config/in-cluster.yaml
+++ b/config/in-cluster.yaml
@@ -17,7 +17,7 @@ jwt:
     public: /keys/jwt_public_key.pem
 casbin:
   model:
-    rule_0: config/rbac_model_0.conf
+    rule_0: config/casbin/rbac_model_0.conf
 lang:
   types: zh-CN|en-US
   names: 简体中文|English
