--- a/config/in-cluster.yaml
+++ b/config/in-cluster.yaml
@@ -13,8 +13,8 @@ redis:
     max: 20
 jwt:
   key:
-    private: /keys/jwt_private_key.pem
-    public: /keys/jwt_public_key.pem
+    private: keys/jwt_private_key.pem
+    public: keys/jwt_public_key.pem
 casbin:
   model:
     rule_0: config/casbin/rbac_model_0.conf
