--- a/config/in-cluster.yaml
+++ b/config/in-cluster.yaml
@@ -1,7 +1,7 @@
 mode: debug
 mysql:
   dsn: >-
-    ${MYSQL_USERNAME}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/zeus?charset=utf8&parseTime=True&loc=Local
+    ${MYSQL_USERNAME}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DB}?charset=utf8&parseTime=True&loc=Local
   pool:
     min: 5
     max: 20
@@ -13,11 +13,17 @@ redis:
     max: 20
 jwt:
   key:
-    private: /keys/jwt_private_key.pem
-    public: /keys/jwt_public_key.pem
+    private: keys/jwt_private_key.pem
+    public: keys/jwt_public_key.pem
 casbin:
   model:
-    rule_0: config/rbac_model_0.conf
+    rule_0: config/casbin/rbac_model_0.conf
+cors:
+  enable: false
+  allow_origins: "http://localhost:8000"
+  allow_headers: []
+  allow_credentials: true
+  max_age: 7200
 lang:
   types: zh-CN|en-US
   names: 简体中文|English
