--- a/config/in-cluster.yaml
+++ b/config/in-cluster.yaml
@@ -28,3 +28,16 @@ lang:
   types: zh-CN|en-US
   names: 简体中文|English
 domain: bullteam.local
+dingtalk:
+  CorpId:
+  CorpSecret:
+  AgentID:
+  SSOSecret:
+  SNSAppID: dingoaztngtzbbyeblwvkl
+  SNSSecret: B6R0UUn_BDIdiPh1vMJKErbEunB9Si2a_0HmYnqqJUI8eE426V5dKWpMNSKslhyj
+email:
+  username: xxx@qq.com
+  password: xxxxxxxx
+  host: smtp.qq.com
+  port: 25
+  from: xxxxxx@qq.com
