--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ cmd/api/zeus
 zeus
 keys/
 .company_sns_access_token_file
+pkg/webui/node_modules/
+pkg/webui/.vscode/settings.json
+pkg/webui/package-lock.json
