--- a/pkg/api/domain/perm/rbac_model_0.conf
+++ b/pkg/api/domain/perm/rbac_model_0.conf
@@ -6,9 +6,10 @@ p = sub, obj, act, domain
 
 [role_definition]
 g = _, _
+g2 = _, _
 
 [policy_effect]
 e = some(where (p.eft == allow))
 
 [matchers]
-m = g(r.sub, p.sub) && r.obj == p.obj && r.act == p.act && r.domain == p.domain
+m = (g(r.sub, p.sub) && r.obj == p.obj && r.act == p.act && r.domain == p.domain) || (g(r.sub, p.sub) && g2(r.obj, p.sub) && r.act == p.act && r.domain == p.domain)
