--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -42,3 +42,16 @@ email:
   host: smtp.qq.com
   port: 25
   from: xxxxxx@qq.com
+ldap:
+  addr: 127.0.0.1:389
+  baseDn: dc=bullteam,dc=com
+  userDn: cn=admin,dc=bullteam,dc=com
+  bindDn: cn=admin,dc=bullteam,dc=com
+  bindPass: zeus@admin#123456
+  authFilter: (&(uid=%s))
+  attributes:
+    - "cn"
+    - "displayName"
+    - "mail"
+  tls: false
+  startTLS: false
