--- a/config/in-cluster.yaml
+++ b/config/in-cluster.yaml
@@ -1,10 +1,14 @@
 mode: debug
-mysql:
-  dsn: >-
-    ${MYSQL_USERNAME}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DB}?charset=utf8&parseTime=True&loc=Local
-  pool:
-    min: 5
-    max: 20
+database:
+  driver: sqlite
+  sqlite:
+    dsn: data/zeus.db
+  mysql:
+    dsn: >-
+      ${MYSQL_USERNAME}:${MYSQL_PASSWORD}@tcp(${MYSQL_HOST}:${MYSQL_PORT})/${MYSQL_DB}?charset=utf8&parseTime=True&loc=Local
+    pool:
+      min: 5
+      max: 20
 redis:
   host: ${REDIS_HOST}:${REDIS_PORT}
   auth: ${REDIS_PASSWORD}
