--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -21,9 +21,9 @@ cors:
   enable: false
   max_age: 7200
 database:
-  driver: sqlite
+  driver: mysql
   mysql:
-    dsn: root:root@tcp(127.0.0.1:3306)/auth?charset=utf8&parseTime=True&loc=Local
+    dsn: root:root@tcp(127.0.0.1:3306)/zeus?charset=utf8&parseTime=True&loc=Local
     pool:
       max: 20
       min: 5
