--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -1,5 +1,7 @@
 base:
   baseurl: http://localhost:8082/
+  isenableaccess: true
+  isenablecode: true
   logpath: /data/log
   port: 8082
   sitename: Zeus 宙斯权限后台管理系统
@@ -23,10 +25,16 @@ cors:
 database:
   driver: mysql
   mysql:
+    chatset: utf8
     dsn: root:root@tcp(127.0.0.1:3306)/zeus?charset=utf8&parseTime=True&loc=Local
+    host: 127.0.0.1:3306
+    name: zeus
+    password: "123456"
     pool:
       max: 20
       min: 5
+    ssl: false
+    user: root
   sqlite:
     dsn: data/zeus.db
 dingtalk:
@@ -35,6 +43,12 @@ dingtalk:
 domain: bullteam.local
 email:
   port: 25
+  smtp:
+    address: xxxxxx@qq.com
+    password: "112234"
+    port: 8082
+    server: smtp.qq.com
+    user: xxxxxx@qq.com
   smtpaddress: xxxxxx@qq.com
   smtppassword: xxxxxxxx
   smtpserver: smtp.qq.com
@@ -61,12 +75,12 @@ ldap:
   tls: false
   userdn: cn=admin,dc=bullteam,dc=com
 mode: debug
+project:
+  merge: true
 redis:
   host: 127.0.0.1:6379
   pool:
     max: 20
     min: 3
-project:
-  merge: true
 security:
   install_lock: true
