fixed alias update bug

--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -28,7 +28,7 @@ database:
     charset: utf8
     host: 127.0.0.1:3306
     name: zeus
-    password: 123456
+    password: root
     pool:
       max: 20
       min: 5
