--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -23,7 +23,7 @@ cors:
   enable: false
   max_age: 7200
 database:
-  driver: mysql
+  driver: sqlite
   mysql:
     charset: utf8
     host: 127.0.0.1:3306
