--- a/config/in-local.yaml
+++ b/config/in-local.yaml
@@ -1,3 +1,7 @@
+account:
+  avatar:
+    width: 150
+    height: 150
 base:
   baseurl: http://localhost:8082/
   isenableaccess: false
@@ -5,6 +9,7 @@ base:
   logpath: /data/log
   port: 8082
   sitename: Zeus 宙斯权限后台管理系统
+  apiurl: http://api.auth.bullteam.local
 casbin:
   model:
     rule_0: config/casbin/rbac_model_0.conf
@@ -23,7 +28,7 @@ cors:
   enable: false
   max_age: 7200
 database:
-  driver: sqlite
+  driver: mysql
   mysql:
     charset: utf8
     host: 127.0.0.1:3306
