fixed role reassign problem

--- a/config/casbin/rbac_model_0.conf
+++ b/config/casbin/rbac_model_0.conf
@@ -12,4 +12,4 @@ g2 = _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = (g(r.sub, p.sub) && r.obj == p.obj && r.act == p.act && r.domain == p.domain) || (g(r.sub, p.sub) && g2(r.obj, p.sub) && r.act == p.act && r.domain == p.domain)
+m = (g(r.sub, p.sub) && r.obj == p.obj && r.act == p.act && r.domain == p.domain) || (g2(r.obj, p.sub) && r.act == p.act && r.domain == p.domain)
